# pylsp-workspace-symbols

./: LICENSE  README.md  gitignore  pyproject.toml  test_plugin.py
.github/workflows/: ci.yml  publish.yml
pylsp_workspace_symbols/: plugin.py
tests/: test_on_type_formatting.py  test_plugin.py
